--- a/src/main/resources/com/example/sistema_gerenciamentofx/technician-view.fxml
+++ b/src/main/resources/com/example/sistema_gerenciamentofx/technician-view.fxml
@@ -13,21 +13,25 @@
 
 <Pane fx:id="pnlOverview" prefHeight="554.0" prefWidth="793.0" style="-fx-background-color: #fffafa;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sistema_gerenciamentofx.controller.TechnicianController">
    <children>
-      <Label layoutX="44.0" layoutY="25.0" text="Nome tecnico" textFill="#47077f">
+      <Label fx:id="technicianName" layoutX="44.0" layoutY="25.0" text="Nome tecnico" textFill="#47077f">
          <font>
             <Font size="24.0" />
          </font>
       </Label>
-      <ScrollPane layoutX="393.0" layoutY="94.0" prefHeight="460.0" prefWidth="400.0" stylesheets="@css/styles.css">
-         <content>
-            <VBox fx:id="pnItems" prefHeight="459.0" prefWidth="400.0" spacing="5.0" style="-fx-background-color: #fffafa;">
-               <padding>
-                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-               </padding>
-            </VBox>
-         </content>
-      </ScrollPane>
       <TextField fx:id="fullname1" layoutX="24.0" layoutY="161.0" prefHeight="27.0" prefWidth="350.0" style="-fx-border-color: #47077F; -fx-background-color: #fffafa; -fx-border-radius: 20;" styleClass="text-input" />
+      <Pane fx:id="pnlView" layoutX="394.0" layoutY="94.0" prefHeight="464.0" prefWidth="390.0">
+         <children>
+            <ScrollPane hbarPolicy="NEVER" prefHeight="460.0" prefWidth="400.0" stylesheets="@css/styles.css">
+               <content>
+                  <VBox fx:id="pnItems" prefHeight="459.0" prefWidth="400.0" spacing="5.0" style="-fx-background-color: #fffafa;">
+                     <padding>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                     </padding>
+                  </VBox>
+               </content>
+            </ScrollPane>
+         </children>
+      </Pane>
       <TextField fx:id="address" layoutX="24.0" layoutY="211.0" prefHeight="27.0" prefWidth="350.0" style="-fx-border-color: #47077F; -fx-background-color: #fffafa; -fx-border-radius: 20;" styleClass="text-input" />
       <TextField fx:id="telephone" layoutX="24.0" layoutY="264.0" prefHeight="27.0" prefWidth="350.0" style="-fx-border-color: #47077F; -fx-background-color: #fffafa; -fx-border-radius: 20;" styleClass="text-input" />
       <TextField fx:id="cpf" layoutX="24.0" layoutY="313.0" prefHeight="27.0" prefWidth="350.0" style="-fx-border-color: #47077F; -fx-background-color: #fffafa; -fx-border-radius: 20;" styleClass="text-input" />
@@ -68,7 +72,7 @@
             <Font name="Calibri Light" size="15.0" />
          </font>
       </Text>
-      <Button fx:id="loginButton1" layoutX="24.0" layoutY="354.0" mnemonicParsing="false" onAction="#login" prefHeight="32.0" prefWidth="350.0" style="-fx-background-color: #47077F; -fx-background-radius: 10;" text="ATUALIZAR" textFill="WHITE">
+      <Button fx:id="loginButton1" layoutX="24.0" layoutY="354.0" mnemonicParsing="false" onAction="#updateData" prefHeight="32.0" prefWidth="350.0" style="-fx-background-color: #47077F; -fx-background-radius: 10;" text="ATUALIZAR" textFill="WHITE">
          <cursor>
             <Cursor fx:constant="OPEN_HAND" />
          </cursor>
@@ -98,7 +102,7 @@
             </Label>
          </children>
       </VBox>
-      <Label fx:id="ordersTotal" layoutX="66.0" layoutY="51.0" prefHeight="30.0" prefWidth="139.0" text="212131332232" textFill="#9f32ab">
+      <Label fx:id="cpfTecnico" layoutX="66.0" layoutY="51.0" prefHeight="30.0" prefWidth="139.0" text="212131332232" textFill="#9f32ab">
          <font>
             <Font size="15.0" />
          </font>
