--- a/src/main/resources/com/example/sistema_gerenciamentofx/login-view.fxml
+++ b/src/main/resources/com/example/sistema_gerenciamentofx/login-view.fxml
@@ -3,7 +3,6 @@
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -27,19 +26,18 @@
             <right>
                 <AnchorPane prefHeight="400.0" prefWidth="300.0" style="-fx-background-color: fffafa;" BorderPane.alignment="CENTER">
                     <children>
-                        <TextField fx:id="username1" layoutX="49.0" layoutY="163.0" prefHeight="25.0" prefWidth="202.0" promptText="Username" style="-fx-background-color: transparent; -fx-border-color: #404040; -fx-border-width: 0px 0px 2px 0px;" />
-                        <PasswordField fx:id="password1" layoutX="49.0" layoutY="202.0" prefHeight="25.0" prefWidth="202.0" promptText="Password" style="-fx-background-color: transparent; -fx-border-color: #404040; -fx-border-width: 0px 0px 2px 0px;" />
-                        <Button fx:id="loginButton1" layoutX="47.0" layoutY="255.0" mnemonicParsing="false" onAction="#login" prefHeight="32.0" prefWidth="202.0" style="-fx-background-color: #47077F; -fx-background-radius: 10;" text="Login" textFill="WHITE">
+                        <PasswordField fx:id="password1" alignment="TOP_CENTER" layoutX="49.0" layoutY="174.0" prefHeight="25.0" prefWidth="202.0" promptText="Password" style="-fx-background-color: transparent; -fx-border-color: #404040; -fx-border-width: 0px 0px 2px 0px;" />
+                        <Button fx:id="loginButton1" layoutX="49.0" layoutY="230.0" mnemonicParsing="false" onAction="#login" prefHeight="32.0" prefWidth="202.0" style="-fx-background-color: #47077F; -fx-background-radius: 10;" text="Login" textFill="WHITE">
                             <cursor>
                                 <Cursor fx:constant="OPEN_HAND" />
                             </cursor>
                         </Button>
-                        <Text fill="#47077f" layoutX="81.0" layoutY="143.0" strokeType="OUTSIDE" strokeWidth="0.0" text="User Login" wrappingWidth="137.24869537353516">
+                        <Text fill="#47077f" layoutX="37.0" layoutY="158.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Hello! Welcome back" wrappingWidth="239.24869537353516">
                             <font>
-                                <Font name="Wingdings 3" size="27.0" />
+                                <Font name="Wingdings 3" size="25.0" />
                             </font>
                         </Text>
-                        <Text fill="#404040" layoutX="65.0" layoutY="313.0" onMouseClicked="#showRegisterStage" strokeType="OUTSIDE" strokeWidth="0.0" text="Don't have an account? Register">
+                        <Text fill="#404040" layoutX="65.0" layoutY="283.0" onMouseClicked="#showRegisterStage" strokeType="OUTSIDE" strokeWidth="0.0" text="Don't have an account? Register">
                             <cursor>
                                 <Cursor fx:constant="HAND" />
                             </cursor>
